01 complete, will clean up code if possible

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -18,20 +18,29 @@
         }
      /* If I don't add text align and font weight then its taking the elements from external css and applying, i think? */
       </style>
-
-
 </head>
 <body>
-     <p> <div>Style me via the external method!</div> </p>
+     <p> 
+      <div>Style me via the external method!
 
+      </div> 
+    </p>
 
-
-   <p> <div class="q"> I would like to be styled with the internal method, please. </div> </p>
+   <p> 
+    <div class="q"> I would like to be styled with the internal method, please. </div> </p>
     
-
-    <div style="color: black; background-color: orange; inline button </div>
+    <!-- "Inline CSS applies styles directly to individual HTML elements using the 'style' attribute." -->
+<div style="color: black; background-color: orange;"
+  <button style="text-align: left;"</button></div>
 
   </body>
 </html>
+
+  <div style="color: black; width: fit-content;">
+    <!-- Applying inline styles to the button element -->
+    <button style="text-align: left; background-color: orange; display: block; width: auto;">Inline Method</button>
+</div>
+
+
 
 
