final commit on 01css solution seen, and experienced gain

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -30,8 +30,17 @@
     <!-- inline css  -->
     <div style="color: black; background-color: transparent; width: fit-content;">
     <button style="text-align: left; background-color: orange; width: auto;">Inline Method</button></div>
-
+ 
 
 </body>
 </html>
+
+   <!-- I realized  that text align and width is not needed in the inline section as its already defaulted -->
+   <!-- I also used unnecessary coding, the solution makes sense after hindsight
+        My understanding is that I don't need to add a div (think of it as a box compartment) 
+        As button style will do this alone.  -->
+
+
+    <!-- Solution -->
+    <button style="background-color: orange; font-size: 18px;">Inline Method</button>
 
